 * Workflow update_from_form and component methods now take a handle to the
    processor (or something which accepts add_message( $type, $msg). 
 * Component->update_from_form now registers errors with the processor rather
    than muddling them with the validation messages.
 * Added top margin to message boxes.
 * Added a render_buttom method to $session
 * Uploading a 0byte file now fails with an error.
 * Added empty checkbox square and items filters now show this rather than a
    cross.
 * Renamed some instances of "Deletion" to "Retired"
 * Removed some unused javascript 

2006-11-07 cjg
 * title of pages now has archive id AFTER page name.

2006-11-08 cjg 
 * Search results now include <link>'s to all the various metadata formats.
 * Abstract pages now lincude <link>'s to various metadata formats
 * Fixed issue that links were not included in dynamic templates.
 * Rewrote document security code and security config file.
 * Renamed $doc->can_view to $doc->user_can_view
 * Security config subs now return ALLOW and DENY not 0 and 1.
 * Fixed bug in buttons in EPrint Remove.
 * Changed rss mimetpye from text/xml to application/rss+xml
 * Renamed XML export methods to EP3 XML
 * Corrected some calls to hidden_field
 * cgi/users/login no longer tries to set login cookie
 * cgi/users/login now provides link to target docum,ent, rather than
    a redirect.
 * Added some vital code to generate_apacheconf to trip the Auth handlers
    into working.

2006-11-08 cjg
 * Used message style for login and logout errors and messages.

2006-11-08 cjg
 * Added pins above and below results in paginator.
 * Moved status filter to be between controls and results on items
    page.
 * Pagination now defaults to sorting by the first field.
 * Fixed size of search controls when no controls are needed.

2006-11-08 moj
 * Added block_enter.js to stop form submission when pressing enter in
    text inputs, along with a hook in Session's render_input_field.